--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "js-yaml": "^3.11.0",
-    "loadash": "^1.0.0",
+    "lodash": "^1.0.0",
     "node-sass": "^4.9.0",
     "nuxt": "^1.0.0",
     "sass-loader": "^7.0.1",
