Update  knowledge base

--- a/knowledge-base/car-sections/body/index.yml
+++ b/knowledge-base/car-sections/body/index.yml
@@ -1,3 +1,71 @@
-ماشین راه نمی‌رود:
-  بله: دنده خراب است
-  خیر: ~/car-sections/control
+درهای خودرو به صورت صحیح بسته نمی‌شوند:
+  بله: |
+    شل‌‌کردن پیچ‌های زبانه قفل روی ستون و جا‌به‌جا کردن آن می‌توان در را رگلاژ کرد. هرچقدر زبانه بیشتر به سمت
+    بیرون کشیده شود، در راحت‌تر بسته شده اما از بدنه فاصله بیشتری می‌گیرد و امکان نفوذ هوا و بلند‌شدن
+    صدای ارتعاش در بیشتر است. هر چقدر زبانه را به سمت داخل بکشیم، در سخت‌تر باز و بسته شده و در عوض
+    بهتر فیت بدنه می‌شود. برای رگلاژ صحیح باید به حد متناسبی از موقعیت زبانه رسید که هم در راحت باز و بسته
+    شده و هم به‌درستی روی بدنه بنشیند. گریس‌کاری تاثیری قابل توجه در بهبود شرایط باز و بست در دارد.
+    گاهی ایراد قالب‌گیری و یا صافکاری نادرست پس از تصادف باعث می‌شود در هیچگاه درست روی بدنه ننشیند، در این شرایط به کمک یک صافکار ماهر احتیاج خواهید داشت.
+  خیر:
+    از داشبورد صدای مچاله‌شدن نایلون بلند می‌شود:
+      بله: |
+        بلند‌شدن صداهایی مشابه مچاله‌شدن نایلون فریزر یا خرد ‌دن یخ از داشبورد خصوصا ‌هنگام رانندگی در مسیرهایی
+        با آسفالت دانه‌درشت و یا ناهموار، مشکلی است که عموما در خودروهای ارزان‌قیمت با داشبورد پلاستیک خشک 
+        یکپارچه مشاهده می‌شود. این ایراد ناشی از سایش قطعات پلاستیکی نسبت به هم هنگام بروز ارتعاش
+        با فرکانس بالاست. برای رفع آن کافی است اجزای مختلف داشبورد را باز کرده و با کمک اسپری سیلیکون، 
+        واشر پلاستیکی و یا فوم یا قطعات بریده شده از چرم محل تماس و سایش را بی‌صدا کنید.
+      خیر:
+        فرمان می‌لرزد:
+          بله:
+            ~/car-sections/control
+          خیر:
+            با چرخاندن فرمان صدای بلندی از پمپ شنیده می‌شود:
+              بله: ~/car-sections/supension
+              خیر: ~/car-sections/control
+            پیشرانه کپ می‌کند: |
+              کپ‌کردن پیشرانه دلایل بسیار متنوعی دارد. در برخی از خودروها، مسئله کپ‌کردن ایرادی
+              ذاتی و ناشی از مشکلات نرم‌افزاری ECU و ناهماهنگی برنامه آن با سنسورهای کالیبره شده 
+              و یا خود پیشرانه است. کپ‌کردن پیشرانه ‌هنگام سرد بودن، بد استارت خوردن و رفع این مشکل
+              در هنگام گرم‌بودن پیشرانه نشانه کثیفی استپر و یا مجموعه دریچه گاز و انژکتورهاست.
+              کپ‌کردن پیشرانه به همراه ریپ و یا مکث می‌تواند نشانه خرابی سنسور اکسیژن یا کوئل باشد. 
+              گاهی کثیفی فیلتر بنزین و یا خرابی پمپ بنزین و حتی سولفاته‌شدن فیوز آن ممکن است چنین حالتی
+              را در پیشرانه ایجاد کند.
+            سرعت بالا رفتن شیشه بالابر بسیار کم است: |
+              کندی شیشه بالابر چند علت می‌تواند داشته باشد. خشکی مکانیسم ریل و قرقره‌ها و کابل می‌تواند
+              سرعت شیشه بالابر را کم کند. بد نیست بعد از چند سال برای حفظ عمر مفید شیشه بالابر مجموعه 
+              ریل را به طور کامل از آلودگی پاک کرده و با روغن چرخ خیاطی مجددا چرب کنید.
+              خشکی نوار شیشه و یا نصب بد آن نیز موجب کندی شیشه بالابر می‌شود. نوار معیوب را به‌موقع تعویض کنید. ضعیف‌بودن آرمیچر یا ضعف جریان تغذیه نیز این ایراد را به وجود می‌آورد. با نصب کابل تقویت اتصال بدنه 
+              و نصب رله تغذیه در مسیر شیشه، این ایراد را تا حدودی می‌توان برطرف کرد. اگر شیشه بسیار کند 
+              حرکت کرده و گیر می‌کند و با ضربه زدن مجددا به کار می‌افتد، عمر مفید موتور آن به پایان رسیده
+              و باید موتور را تعویض کرد.
+            کولر صدا میدهد: |
+              درون مدارات کولر هوا وجود دارد. گاز درون کولر را تخلیه کرده، مجددا شارژ و سپس هواگیری کنید.
+              تسمه کمپرسور شل شده است. تسمه فرسوده را تعویض و تسمه سالم را سفت کنید.
+              اتصالات کمپرسور را محکم و قطعات معیوب را تعویض کنید.
+            صدای ناهنجار لاستیک ها در همه سطوح به گوش می رسد: |
+              تنظیم نبودن فرمان یا خارج بودن چرخ از محور اصلی اش است (معمولاً در اثر ضربه شدید این اتفاق می افتد).
+              اگر صدای شنیده شده از لاستیکها نیست و به صورت “تق تق تق” ، در هنگام حرکت و چرخاندن فرمان به یکی از طرفین، و از قسمتهای مکانیکی شنیده شود، احتمالاً علت آن خرابی کلگی بیرونی پلوس است.
+              لاستیک نو، بمدت یک یا دو روز در حین رانندگی در خط مستقیم هم صدای جیغ دارد.
+            هنگام پیچیدن سر پیچ ها، صدای جیغ از لاستیک‌ها شنیده می شود:
+              زاویه چرخهای جلو، یا عقب خودرو تنظیم نیست و باید اصلاح شود، در صورت تداوم این وضعیت، لاستیک سابی اتفاق خواهد افتاد.
+            سايص غيزعادي در وٍسط تايز:
+              لاستیک پر باد است
+            سایش غیر عادی در کناره لاستیک:
+              لاستیک کم باد است
+            سایش غیر عادی یک طرف عاج تایر:
+              عدم تنظیم جلو بندی و سیستم فرمان
+            سیستم تهویه ی هوا نشتی دارد: |
+              اولین کار این است که سیستم کولر را با گاز خنک کننده شارژ کنید و همه نشتی های آن را با آستری مناسب بپوشانید
+              در این مرحله باید گاز خنک کننده بیشتری به سیستم کولر تزریق کنید تا جریان باد خنک تر و خشک تر شود و نشتی روی لوله ها و 
+              شلنگ ها، واشرها و اورینگ ها را بگیرد؛ از مواد ضد خوردگی برای بالا بردن عمر سیستم استفاده کنید 
+              و عملکرد آن را بهبود ببخشید. این سریع ترین و ساده ترین راه حل برای رفع مشکل سیستم تهویه ی خودرو است.
+            اگرسیستم تهویه به درستی کار کند: |
+              باید میعان در آن صورت بگیرد و از طریق لوله تخلیه رطوبت به خارج از خودرو کشیده  شود.
+              مشکل زمانی پیش می آید که گل و لای، یا قارچ و خزه مسیر لوله ی تخلیه ی سیستم تهویه را مسدود می کند و مانع جاری شدن آب در داخل سیستم می شود.
+              اما رطوبت داخل سیستم باید به جایی منتقل شود و در دسترس ترین مسیر کف خودروی شماست؛ در این حالت یا کف خودرو آب جمع می شود یا کفپوش های خودرو مرطوب می شود.
+              رطوبت زیاد در نهایت منجر به کپک زدن و رشد قارچ، تخریب کفپوش خودرو، ایجاد بوی نامطبوع، و شاید منجر به آسیب دیدن سیستم الکترونیکی و بدنه خودرو شود.
+            سیستم تهویه بوی نامطبوع میدهد: |
+              محلول مخصوص از بین برنده بوی نامطبوع را میتوان به راحتی به داخل دریچه های ورودی سیستم در خارج از خودرو،
+              یعنی در فاصله ی بین شیشه جلوی خودرو و کاپوت جلویی، اسپری کرد. زمانی که سیستم خنک کننده روشن است،
+              درجه فن را روی بالاترین حالت آن تنظیم کنید، و دکمه " چرخش هوا " را در حالت خاموش قرار دهید تا هوای تازه وارد اتاق خودرو شود،
+              محصول مورد نظر را طبق دستورالعمل های روی آن در جلوی دریچه های ورودی هوا اسپری کنید.
