--- a/knowledge-base/car-sections/engine/index.yml
+++ b/knowledge-base/car-sections/engine/index.yml
@@ -9,7 +9,27 @@
         باید پست های باطری را تمیز و یا عوض کنید. اتصال های استارت را محکم کنید
       اتصال بدنه موتور خوب نیست:
         تمیز و یا تعویض نمایید
+    روشن‌شدن موتور در هوای سرد، با سر و صدا همراه است: |
+      در هوای خیلی سرد گاهی پیش می‌آید که پمپ آب یخ زده و توانایی انجام کار را ندارد. در این وضعیت
+      خودرو را به جای گرم منتقل کنید تا یخ‌ها آب شوند. همچنین می‌توانید از روش‌های ایمن برای آب‌کردن
+      یخ‌ها استفاده کنید تا در اثر تغییر ناگهانی دمای بدنه پمپ آب، شاهد ایجاد ترک نباشید.
+      جدا از ظاهر پمپ که یخ‌زدگی را نشان می‌دهد، هرزگردی تسمه روی پولی در شرایط آب و هوایی سرد
+      نیز می‌تواند نشانه‌ای از یخ‌زدگی پمپ آب باشد. اگر ایراد از پمپ آب و تسمه نبود، شاید بلبرینگ‌های 
+      دینام روغن‌کاری مجدد را می‌طلبند. بلبرینگ‌ها را با چند قطره روغن سبک، روغن‌کاری کنید.
+      یک یا ۲‌قطره کافی است. تسمه پروانه نیز ممکن است شل باشد که ابتدا سلامت تسمه آن
+      را تایید کنید و سپس طبق اندازه مجاز تعیین شده توسط سازنده، آن را سفت کنید.
     گردش موتور عادی است؟:
+      بله:
+        حعبه دنده صدا میدهد؟:
+          تعویض دنده‌های جلو با سر و صدا همراه است: |
+            احتمالا ایراد در دستگاه کلاچ است که به خوبی آزاد نمی‏کند و موجب بروز درگیری‌های
+            پر سر و صدا می‌شود. شکستگی فنرهای حلقوی، معیوب بودن دنده برنجی و .‌.‌. تنها بخشی از 
+            این عوامل هستند.
+          حین حرکت رو به جلو، جعبه دنده صدا می‌دهد: |
+            در یک راستا نبودن جعبه دنده و موتور و همچنین محکم‌نبودن پیچ‌های جعبه دنده مشکل‌ساز خواهند بود.
+            دسته موتور و پایه جعبه دنده بازدید و رفع عیب شوند. روغن جعبه دنده اگر به اندازه نباشد یا با مجموعه 
+            جعبه دنده خودرو شما همخوانی نداشته باشد، می‌تواند در این خرابی نقش داشته باشد.
+            بلبرینگ‌های ورودی جعبه دنده و محور همیشه‌گرد نیز  در صورت فرسودگی و معیوب بودن، تعویض شوند.
       خرابی سیستم جرقه:
         جرقه سر شمع ها کنترل کنید
       جرقه سر شمع مشاهده نمی شود:
@@ -63,10 +83,19 @@
         فیلرگیری کنید.
   خیر:
     نورچراغ جلو کم است؟:
-      بله:
+      بله: |
         باطری ضعیف یا معیوب است و یا کابل های باطری خورده و زنگ زده شده است.
         باطری را تعویض و یا اتصلات پست های آن را بررسی کنید و تمیز کنید.
-      خیر:
+      خیر: |
         احتمال می‌رود که سولونوئید استارت معیوب است و باید سولونوئید استارت را تمیز کنید
         یا بندیکس کثیف و یا معیوب است و باید جا شیار دنده استارت را تمیز نمایید
         یا استارت معیوب است تعمیر و یا تعویض نمایید
+در خودرو 405، پارس و سمند، وقتی موتور خاموش است، با تکان دادن فرمان به سمت چپ و راست، بصورت سریع صدای “تق تق” شنیده می شود: |
+  فرمان اتومبیل شما نیاز به واشر بندی دارد.
+  یا سیبک و یا قرقری فرمان اتومبیل ایراد دارد.
+  احتمال دارد که پیچهای جعبه فرمان شل باشند.
+  اگر این صدا در حالت روشن بودن موتور نیز شنیده شود، بوش های جک هیدرولیک فرمان ایراد دارند.
+هنگام دور زدن با فرمان تمام دور به سمت چپ، یا راست، صدای مداوم “تق تق تق” شنیده می شود:
+  کلگی بیرونی پلوس (چپ یا راست) خراب شده و باید تعمیر شود.
+هنگام دور زدن به سمت چپ یا راست، صدای “تق تق” شنیده می شود، بصورتیکه در حرکت اتومبیل نیز اختلال ایجاد می شود:
+  دنده های هرزگرد، یا همان دنده های دیشلی گیربکس ایراد دارند.
