Fix control knowledgebase

--- a/knowledge-base/car-sections/control/index.yml
+++ b/knowledge-base/car-sections/control/index.yml
@@ -4,25 +4,25 @@
       بله:
         این خرابی معمولا در اثر کارکرد بدون روغن و یا سطح پایین روغن به وجود می‌آید، چرا که اگر روغن به میزان کافی بین قطعاتی که درون پمپ‌ روی هم با فشار زیادی در حال حرکت هستند، وجود نداشته باشد، باعث خورده‌شدن سریع آنها می‌شود. ساییدگی و پله‌کردن این قطعات باعث می‌شود روغن هیدرولیکی که درون پمپ است، از بین قطعات به بیرون فرار کند و نتواند آن فشار لازم برای کمک به چرخش فرمان را ایجاد کند.
       خیر:
-        خرابی پمپ هیدرولیک:
+        خرابی پمپ هیدرولیک: |
           معمولا این خرابی با بلند‌شدن صدای جیغ پمپ هیدرولیک همراه است که در نتیجه فرمان نیز سفت می‌شود. البته صدای جیغ کمی که موقع رسیدن چرخ‌ها به انتهای چرخش آنها از پمپ به گوش می‌رسد، طبیعی است و البته که نباید هیچ وقت فرمان را آنقدر بچرخانیم که این صدا بلند شود.
 اما گاهی مواقع این صدا در لحظه چرخش فرمان بلند می‌شود و فرمان نیز به کندی عمل می‌کند و یا نیاز به گاز دادن موتور است تا فشار بیشتری درون پمپ ایجاد شود. این عیب ناشی از خرابی ماه و ستاره و یا پله شدن دو لبه قرار گرفته ‌روی آنهاست و یا اورینگ‌های ضعیف درون پمپ باعث فرار روغن می‌شوند. در این هنگام باید یک بررسی اجمالی از پمپ داشته باشیم. ضمن اینکه فراموش نکنیم که پمپ هیدرولیک به مرور خراب‌تر می‌شود و هر چه زودتر رفع عیب شود، بهتر است و می‌تواند با هزینه‌های کمی مثل تعویض اورینگ‌ها ‌یا رفع پله‌ها و لبه‌های ایجاد شده، مثل روز اولش شود.
-        خراب شدن روغن هیدرولیک:
+        خراب شدن روغن هیدرولیک: |
           در صورتیکه از روغن هیدرولیک مرغوب و مناسب استفاده نشود، و یا اینکه بیشتر از 40 هزار کیلومتر از آخرین تعویض آن گذشته باشد، احتمال خرابی پمپ هیدرولیک، کاسه نمدهای شیر هیدرولیک و جک دو طرفه هیدرولیک بیشتر خواهد شد.
           روغن هیدرولیک VG46 برای محصولات ایران خودرو و سایپا مناسب است، برندها بهران، کاسپین و توتال نیز در نمایندگی های مجاز وجود دارد.
           در صورت خرابی این قطعات، روغن از آنها نشت کرده و سطح روغن هیدرولیک در مخزن کاهش می یابد.
-    استفاده از قطعات نا مرغوب:
+    استفاده از قطعات نا مرغوب: |
       همواره فشار بالایی از روغن در سیستم هیدرولیک در جریان است و لذا اهمیت استفاده از قطعات مرغوب در این سیستم
       بیشتر است. بطور مثال شیلنک فشار قوی هیدرولیک در پژو 206 از بالای مانیفولد اگزوز عبور کرده و در صورت نشت
       روغن از محل اتصال شیلنک و لوله، روغن هیدرولیک [که قابل اشتعال است]، روی مانیفولد اگزوز ریخته می شود و 
       بدلیل حرارت بالای مانیفولد، احتمال آتشسوزی موتور وجود دارد. موارد قابل توجهی از آتشسوزی موتور 206 بعلت
       نشت روغن هیدرولیک گزارش شده است.
-    استفاده از رینگ و لاستیک غیر استاندارد - بر هم خوردن زوایای 5 گانه جلوبندی:
+    استفاده از رینگ و لاستیک غیر استاندارد - بر هم خوردن زوایای 5 گانه جلوبندی: |
       بر هم خوردن زوایای 5 گانه جلوبندی و یا استفاده از رینگ یا لاستیک با سایزی غیر از آنچه که تولید کننده خودرو
       تعیین کرده، باعث می شود که فشار بیشتری به سیستم هیدرولیک برای چرخاندن فرمان وارد آید. در این حالت، در
       برخی مواقع نیز پمپ هیدرولیک برای انجام وظیفه خود صدای غیر عادی تولید می کند.
       علائم خرابی سیستم هیدرولیک
-    روغن ریزی از هر یک از قسمتها:
+    روغن ریزی از هر یک از قسمتها: |
       اگر سطح روغن هیدرولیک در مخزن آن به مرور زمان کم شود، یکی از قطعات زیر نشتی دارند که بسادگی با مشاهده روغن در اطراف آن قابل تشخیص خواهد بود
       i- مخزن یا شیلنکهای هیدرولیک
       ii- سوئیچ الکتریکی لوله فشار قوی
@@ -31,11 +31,10 @@
   خیر:
     فرمان می‌چرخد؟:
       بله:
-        آیا چرخ ها نمی‌چرخند؟
-          میله و چرخ دنده مشکل دارند:
-            میله و چرخ دنده را تعمیر نمایید
-        هنگام چرخش تق تق میکند؟
-          روش تشخیص صدای تق تق:
+        آیا چرخ ها نمی‌چرخند؟: |
+          میله و چرخ دنده مشکل دارند
+          میله و چرخ دنده را تعمیر نمایید
+        هنگام چرخش تق تق میکند؟: 
             در موتور خودرو را باز کرده و سپس غربلیک را به چپ و راست حرکت دهید اگر صدای تق تق امد مشکل از جعبه فرمان است 
       خیر: شاسی مشکل داره
     برگشت فرمان به سختی صورت می پذیرد؟:
@@ -45,12 +44,12 @@
         عدم تنظیم صحیح چرخ های جلو
     خلاصی کم یا بیش از حد غربیلک فرمان؟:
       بله:
-        خلاصی زیاد در دستگاه فرمان:
+        خلاصی زیاد در دستگاه فرمان: |
           اولین علت:لقی در دنده فرمان(تنظیم مجدد – تعویض قطعات خورد شده)
           دومین علت:لقی در اهرم بندی(تنظیم مجدد – تعویض قطعات خورد شده)
           سومین علت:خوردگی قطعات سگدست(تنظیم مجدد – تعویض قطعات خورد شده)
           چهارمین علت:لقی یاتاقان چرخ(تعویض قطعه معیوب)
-        گیج بودن فرمان خودرو:
+        گیج بودن فرمان خودرو: |
           اولین علت:کم بودن یا نامیزان بودن باد تایرها(تایرها را تا میزان صحیح باد کنید)
           دومین علت:لقی اهرمها(تنظیم مجدد – تعویض قطعات خورد شده – روغن کاری)
           سومین علت:لقی دنده فرمان(تنظیم مجدد – تعویض قطعات خورد شده – روغن کاری)
@@ -60,14 +59,14 @@
           هفتمین علت:لقی زیاد در کینگ پین(تعویض قطعات خورد شده)
           هشتمین علت:لق بودن فنرهای عقب(محکم کردن)
           نهمین علت:معیوب بودن میله های تعادل دهنده(محکم کردن قطعات و اتصالات – تعویض در صورت خرابی)
-        خودرو در حالت عاذی رانندگی به یک سمت کشیده میشود:
+        خودرو در حالت عاذی رانندگی به یک سمت کشیده میشود: |
           اولین علت:نامیزان بودن فشار باد تایرها(باد تایرها تنظیم شود)
           دومین علت:نامساوی بودن کمبر و یا کستر(تنظیم زوایا)
           سومین علت:افت نامساوی – شکستگی – لق بودن اتصالات فنرها(محکم بستن – تعویض قطعات معیوب)
           چهارمین علت:سفت بودن یاتاقان چرخ(تنظیم مجدد – تعویض قطعات)
           پنجمین علت:مسیر چرخها یکی نیست(مسیز چرخها را ازمایش کنید – شاسی را میزان کنید – محکم کردن قطعات – تعویض قطعات معیوب)
       خیر:
-        سفتی فرمان:
+        سفتی فرمان: |
           اولین علت:کم بودن یا نامساوی بودن باد تایرها(تنظیم باد تایرها)
           دومین علت:اصطکاک در جعبه فرمان(روغن کاری – تنظیم مجدد – تعویض قطعات خورد شده)
           سومین علت:اصطکاک در اهرم بندی(روغن کاری – تنظیم مجدد – تعویض قطعات خورد شده)
@@ -80,21 +79,21 @@
         شفت واسطه فرمان مشکل دارد
       خیر:
         سیبک پایینی تعلیق جلو حین  حرکت  خودرو  در  سرعت  پایین،  صدایی  در غربیلک فرمان ایجاد می شود
-      شکستن فنر:
+      شکستن فنر: |
         اولین علت:زیاد بودن بار خودرو(از زیاد بار کردن خودرو خودداری کنید)
         دومین علت:لق بودن سنتر بولت یا مهره ر کرپی ها یو شکل(مهره را محکم کنید)
         سومین علت:معیوب بودن کنک فنر(تعمیر و یا تعویض کنید)
         چهارمین علت:سفت بودن گوشواره ی فنر(انرا ازاد کنید و یا تعویض کنید)
-      ضعیف بودن فنر:
+      ضعیف بودن فنر: |
         اولین علت:شکستگی فنر برگی(انرا تعویض کنید)
         دومین علت:ضعیف بودن کمک فنر(انرا تعویض کنید)
         سومین علت:کوتاه شدن فنر مارپیچی(واشر بالایی اضافه کنید)
         چهارمین علت:معیوب بودن کمک فنر(تعمیر و یا تعویض کنید)
-      کج شدن خودرو در سر پیچها:
+      کج شدن خودرو در سر پیچها: |
         اولین علت:لق بودن میله تعادل دهنده(محکم کنید)
         دومین علت:افت فنر یا ضعیف بودن فنر(تعمیر و یا تعویض کنید)
         سومین علت:صحیح نبودن کستر(تنظیم کنید)
-      ساییدگی نادرست تایرها:
+      ساییدگی نادرست تایرها: |
         ولین علت:ساییدگی دو کناره سطح تماس تایر در اثر کمی فشار باد(تنظیم فشار باد تایرها)
         دومین علت:ساییدگی وسط سطح تماس در اثر زیادی فشار باد(تایرها را تا فشار صحیح باد کنید)
         سومین علت:ساییدگی یکی از کناره های سطح تماس در اثر زیاد بودن بیش از حد کمبر(زاویه کمبر را تنظیم کنید)
@@ -102,6 +101,6 @@
         پنجمین علت:ساییدگی گوشه ناشی از سرعت زیاد در سر پیچها(ترمزها را میزان کنید – زوایای چرخ را میزان کنید)
         ششمین علت:ساییدگی غیر یکنواخت یا موضعی ناشی از علل مکانیکی(چرخها را میزان کنید اهرمها را تنظیم کنید)
         هفتمین علت:ساییدگی سریع ناشی از سرعت زیاد(برای ازدیاد عمر تایر با سرعت کمتر برانید)
-      رانندگی خشن و سخت:
+      رانندگی خشن و سخت: |
         اولین علت:زیاد بودن فشار باد تایرها(فشار باد چرخها را تا میزان صحیح کاهش دهید)
         دومین علت:معیوب بودن کمک فنرها(تعمیر یا تعویض کنید)
