--- a/knowledge-base/car-sections/control/index.yml
+++ b/knowledge-base/car-sections/control/index.yml
@@ -6,7 +6,13 @@
       خیر:
         خرابی پمپ هیدرولیک: |
           معمولا این خرابی با بلند‌شدن صدای جیغ پمپ هیدرولیک همراه است که در نتیجه فرمان نیز سفت می‌شود. البته صدای جیغ کمی که موقع رسیدن چرخ‌ها به انتهای چرخش آنها از پمپ به گوش می‌رسد، طبیعی است و البته که نباید هیچ وقت فرمان را آنقدر بچرخانیم که این صدا بلند شود.
-اما گاهی مواقع این صدا در لحظه چرخش فرمان بلند می‌شود و فرمان نیز به کندی عمل می‌کند و یا نیاز به گاز دادن موتور است تا فشار بیشتری درون پمپ ایجاد شود. این عیب ناشی از خرابی ماه و ستاره و یا پله شدن دو لبه قرار گرفته ‌روی آنهاست و یا اورینگ‌های ضعیف درون پمپ باعث فرار روغن می‌شوند. در این هنگام باید یک بررسی اجمالی از پمپ داشته باشیم. ضمن اینکه فراموش نکنیم که پمپ هیدرولیک به مرور خراب‌تر می‌شود و هر چه زودتر رفع عیب شود، بهتر است و می‌تواند با هزینه‌های کمی مثل تعویض اورینگ‌ها ‌یا رفع پله‌ها و لبه‌های ایجاد شده، مثل روز اولش شود.
+          اما گاهی مواقع این صدا در لحظه چرخش فرمان بلند می‌شود و فرمان نیز به کندی عمل می‌کند
+          و یا نیاز به گاز دادن موتور است تا فشار بیشتری درون پمپ ایجاد شود. این عیب ناشی از خرابی ماه و ستاره 
+          و یا پله شدن دو لبه قرار گرفته ‌روی آنهاست و یا اورینگ‌های ضعیف درون پمپ باعث فرار روغن می‌شوند.
+          در این هنگام باید یک بررسی اجمالی از پمپ داشته باشیم.
+          ضمن اینکه فراموش نکنیم که پمپ هیدرولیک به مرور خراب‌تر می‌شود 
+          و هر چه زودتر رفع عیب شود، بهتر است و می‌تواند با هزینه‌های کمی مثل تعویض
+          اورینگ‌ها ‌یا رفع پله‌ها و لبه‌های ایجاد شده، مثل روز اولش شود.
         خراب شدن روغن هیدرولیک: |
           در صورتیکه از روغن هیدرولیک مرغوب و مناسب استفاده نشود، و یا اینکه بیشتر از 40 هزار کیلومتر از آخرین تعویض آن گذشته باشد، احتمال خرابی پمپ هیدرولیک، کاسه نمدهای شیر هیدرولیک و جک دو طرفه هیدرولیک بیشتر خواهد شد.
           روغن هیدرولیک VG46 برای محصولات ایران خودرو و سایپا مناسب است، برندها بهران، کاسپین و توتال نیز در نمایندگی های مجاز وجود دارد.
